<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:id="@+id/nameEditText"
            android:hint="@string/hint_name"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:id="@+id/phoneEditText"
            android:hint="@string/hint_phone"
            android:inputType="phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:id="@+id/emailEditText"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:color="@android:color/black"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressTextView"
            android:imeOptions="actionNext"
            android:text="@string/address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:id="@+id/streetEditText"
            android:hint="@string/hint_street"
            android:inputType="textPostalAddress|textCapWords"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:id="@+id/cityEditText"
            android:hint="@string/hint_city"
            android:inputType="textPostalAddress|textCapWords"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_save_contact"
            android:id="@+id/SaveContact" />
    </LinearLayout>
</ScrollView>








